# PQC-CBOM-QRA

./: .clinerules  .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
.tmp_bin/: psql
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 20260511_0001_initial_schema_baseline.py
api/src/cbom_api/: __init__.py  config.py  dependencies.py  main.py  middleware.py
api/src/cbom_api/auth/: jwt.py  password.py  rbac.py
api/src/cbom_api/db/: session.py
api/src/cbom_api/models/: db.py  schemas.py
api/src/cbom_api/routers/: admin.py  assets.py  auth.py  cbom.py  certificates.py  findings.py  qars.py  qsri.py  reports.py  scans.py  traffic.py
api/src/cbom_api/services/: cbom_service.py  minio_client.py  report_service.py  scan_service.py  websocket_service.py
api/tests/: conftest.py
api/tests/integration/: test_auth.py  test_cbom.py
api/tests/security/: test_security.py
db/: init.sql
docs/: CBOM_MVP_Architecture_v1.0.docx  CBOM_MVP_Architecture_v1.0.md  CBOM_PQC_BRD_v1.0.docx  CBOM_PQC_BRD_v1.0.md
frontend/: Dockerfile
magika-service/: Dockerfile  pyproject.toml
orchestrator/: Dockerfile  pyproject.toml
rabbitmq/: definitions.json  rabbitmq.conf
scanners/: Dockerfile  pyproject.toml
scanners/src/cbom_scanners/utils/: ollama_client.py
scoring-engine/: Dockerfile  pyproject.toml
scripts/: backup.sh  gen-certs.sh  init-minio.sh  model-pull.sh  seed-db.sh
specs/: -CODE_EXECUTION_PLAN.md  00_MASTER_SPEC.md  01_PROJECT_STRUCTURE.md  02_DOCKER_COMPOSE.md  03_DATABASE_SCHEMA.md  04_RABBITMQ.md  05_API_BACKEND.md  06_SCANNER_WORKERS.md  07_CBOM_GENERATOR.md  08_SCORING_ENGINE.md  09_ORCHESTRATOR.md  10_OLLAMA_SLM.md  11_MINIO_STORAGE.md  12_TRAEFIK_TLS.md  13_FRONTEND_REACT.md  14_ADMIN_UI.md  15_ZEEK_SENSOR.md  16_TRAFFIC_SIM.md  17_SECURITY.md  18_SCRIPTS_AND_MAKEFILE.md  19_TESTING_STRATEGY.md  20_NFR_CHECKLIST.md  21_PQC_TEST_PROMPTS.md
traefik/: dynamic.yml  traefik.yml
traefik/certs/: ca.srl
