[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbom-api"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.*",
    "uvicorn[standard]==0.29.*",
    "pydantic==2.*",
    "pydantic-settings==2.*",
    "sqlalchemy[asyncio]==2.*",
    "asyncpg==0.29.*",
    "alembic==1.13.*",
    "python-jose[cryptography]==3.3.*",
    "passlib[bcrypt]==1.7.*",
    "aio-pika==9.*",
    "redis[hiredis]==5.*",
    "boto3==1.34.*",
    "structlog==24.*",
    "prometheus-fastapi-instrumentator==7.*",
    "weasyprint==62.*",
    "cyclonedx-python-lib==7.*",
    "python-multipart==0.0.*",
    "email-validator>=2.1.0",
    "httpx==0.27.*",
]

[project.optional-dependencies]
dev = ["pytest==8.*", "pytest-asyncio==0.23.*", "httpx==0.27.*", "ruff", "mypy"]
test = [
    "pytest==8.*",
    "pytest-asyncio==0.23.*",
    "pytest-cov==5.*",
    "httpx==0.27.*",
    "factory-boy==3.*",
    "faker==25.*",
    "respx==0.21.*",
    "freezegun==1.5.*",
    "aiosqlite>=0.20.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
