[project]
name = "magika-service"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.111", "uvicorn>=0.29", "magika>=0.5", "pydantic>=2"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.p[tool.p[tool.p[tool.p[tool.p[tool.p[tool.p[tool.p[tool.p[tool.p[tool.p[tool.p[tool.p[tool.p[tool.p[tool.'EOF'
[project]
name = "traffic-sim"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.111", "uvicorn>=0.29", "locust>=2", "pydantic>=2", "requests>=2"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
