[project]
name = "cbom-scanners"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = ["celery>=5.4", "structlog>=24", "aio-pika>=9", "httpx>=0.27", "pydantic>=2"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
